# CS3052-P01-TuringMachines

./: CMakeLists.txt  README.md
Task 2 - Additional TMs/: alpha.tape  bitshift.tape  bitshift.tm
Task 3 - Complexity Analysis/alphasort-tapes/: .~lock.alphasort-complexity.ods#  alpha1.tape  alpha10.tape  alpha2.tape  alpha3.tape  alpha4.tape  alpha5.tape  alpha6.tape  alpha7.tape  alpha8.tape  alpha9.tape  alphasort-complexity.ods  alphasort.tm
Task 3 - Complexity Analysis/binadd-tapes/: binadd-complexity.ods  binadd1.tape  binadd10.tape  binadd2.tape  binadd3.tape  binadd4.tape  binadd5.tape  binadd6.tape  binadd7.tape  binadd8.tape  binadd9.tape
Task 3 - Complexity Analysis/bitshift-tapes/: bitshift.tape
Task 3 - Complexity Analysis/paren-tapes/: paren-complexity.ods  paren3.tape  paren4.tape  paren5.tape  paren6.tape  paren7.tape  paren8.tape  paren9.tape
src/: .nfs000000000006051c00000240  .nfs000000000006191e000005a0  Makefile  alphabet.cpp  alphabet.h  binadd.tm  fileParser.cpp  fileParser.h  main.cpp  paren.tm  runtm  state.cpp  state.h  tape.cpp  tape.h  tm.cpp  tm.h  transition.cpp  transition.h
src/Tests/SimpleTM/: metatest.sh
src/Tests/TestBinAdd/: metatest.sh
src/Tests/TestNonDet/: metatest.sh
src/Tests/TestParen/: metatest.sh
src/Tests/TestRepeat/: metatest.sh
src/Tests/TestTMs/: metatest.sh
